[package]
name = "gerber-types"
version = "0.1.1"
documentation = "https://docs.rs/gerber-types/"
repository = "https://github.com/dbrgn/gerber-types-rs"
license = "MIT OR Apache-2.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
description = "Types and code generation for Gerber files (RS-274X)."
readme = "README.md"
keywords = ["gerber", "pcb", "rs274x", "cad", "cam"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
]
edition = "2018"

[dependencies]
chrono = "0.4"
conv = "0.3"
num-rational = "0.3"
thiserror = "1"
uuid = "0.8"
